templates/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <NOM-APP>           # ⚠
  labels:
    app.kubernetes.io/managed-by: argocd
    owner: ezekiel-soh
