templates/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <NOM-APP>         # ⚠
  namespace: <NOM-APP>    # ⚠
  labels:
    app: <NOM-APP>        # ⚠
spec:
  type: ClusterIP
  selector:
    app: <NOM-APP>        # ⚠
  ports:
    - name: http
      port: 80
      targetPort: 80      # ⚠ adapter au port réel
      protocol: TCP
